# analisa_gols_in_jogos

./: .gitignore  1-coleta_urls.py  2-cria_csv.py  2-last_ten.py  READme.md  env.py  makefile  pyproject.toml  quickstart.py  requirements.txt  sheet_get_values.py  sheets_update_values.py
codigo/: __init__.py  academia.py  campeonatos_nao_analisados.json  database.py  filter_ligas.ipynb  gdrive.py  helpers.py  main.py
db_script/: mysql_create_table.sql
tests/: test_academia.py  test_others.py
